--- a/assets/scss/_social.scss
+++ b/assets/scss/_social.scss
@@ -42,8 +42,9 @@
     }
     a {
         img {
-            @extend %add-grayscale;
+            
             // @include grayscale(50);
+            @extend %add-grayscale;
             @include opacity(0.68);
             @include transition(filter, 0.5s);
         }
@@ -55,4 +56,8 @@
             }
         }
     }
+}
+
+.ie #social-nav img {
+    @extend %add-grayscale;
 }
