--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -5,18 +5,18 @@
 
 .home {
     .above-header {
-        @include max_phone{
+        /* @include max_phone{
             height: 197px;
-        }
-        @include max_pager {
+        } */
+        @include max_phone {
             height: 257px;
         }
     }
     #cherry-blossom-main {
-        @include max_tablet{
+        /* @include max_tablet{
             background-position: -321px -227px !important;
-        }
-        @include max_phone {
+        } */
+        @include max_tablet {
             width: 740px !important;
             background-position: -321px -117px !important;
         }
@@ -57,8 +57,9 @@
     }
 }
 .hero-right {
-    // margin-top:     8px;
     margin-bottom:  40px;
+    padding-top: 1.7% !important;
+    
     @extend %pink_border;
     // @include border-radius(10px);
 
