--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -65,6 +65,7 @@
 
     @include max_tablet {
         margin-bottom: 0;
+        padding-top: 2% !important;
     }
 }
 
@@ -342,8 +343,8 @@ strong, p strong {
 }
 
 .home .page-content {
-    padding-bottom: 30px;
-    
+    padding-bottom: 30px !important;
+
     span {
         color: white;
     }
